# Huawai_course

./: SquareEquation.c
CPU/: .gitignore  Assembler.cpp  CMD_ENG.txt  CMakeLists.txt  CPU.cpp  CPU.h  Disam_prog.txt  Makefile  graph.txt  stackCpp.h
CPU/include/: Assembler.h  CPU.h
CPU/source/: Assembler.cpp  CPU.cpp  Disassemblr.cpp
Onegin/: .Onegin_output.txt.swp  Makefile  Onegin  Onegin.c  Onegin.h  Onegin_functions.c  Onegin_input.txt  Onegin_output.txt
Square_equation/: Makefile  SquareEquation  SquareEquation.c  SquareEquation_functions.c  Square_equation.h
Stack/: Makefile  Stack  Stack.c  Stack.h  main  main.c  stack.c
